--- a/KoC-Launcher/App.xaml
+++ b/KoC-Launcher/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:KoC_Launcher"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ModernButtonTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
